tests/paczka1/small_fuzzy/60620381.err
Error in line 2: erlZ S382 76,1
Error in line 4: Isahbv S382 68,2
Error in line 3: erlZ A713 46,7
